classDiagram
    class User {
        +id : UUID
        +lastName : str
        +firstName: st
        +password: str
        +email : str
        +created_ad : str
        +update_ad : str
}
    class Place {
        +id : UUID
        +title : str
        +description : str
        +price : int
        +latitude : float
        +longitude : float
        +latitude: float
        +longitude: float
        +created_at: datetime
        +updated_at: datetime
}
    class Review {
        +id : UUID
        +place : str
        +user : str
        +rating : str
        +comment : str
}
    class Amenity {
        +id : UUID
        +name: string
        +description: string
        +created_at: datetime
        +updated_at: datetime
        +create_at: void
        +update_at: void
        +delete_at: void
}

Place --> User : Association
Review --> User : Association
Review --> Place : Association
Place o-- Amenity : Aggregation